[package]
name = "zkc-da-node"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.9.2"
tonic-web = "0.9.2"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
prost = "0.11"
tracing-subscriber = "0.3.17"
tonic-reflection = "0.9.2"

[build-dependencies]
tonic-build = "0.9.2"
